# codif-ape-nace-revision

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  build-vector-db.py  build_nace2025_sirene4.py  create-mapping.py  encode-ambiguous-cag.py  encode-ambiguous-rag.py  encode-ambiguous.py  encode-multivoque.py  encode-univoque.py  evaluate_strategies.py  infer-llm.py  pyproject.toml  renovate.json  requirements.txt  setup.sh  write_prompts.py
argo-workflows/: relabel-naf08-to-naf25-rag.yaml  relabel-naf08-to-naf25.yaml
bash/: fetch_model_s3.sh
etl-nace-rev/: configmap.yaml  cronjob.yaml  rolebinding.yaml  serviceaccount.yaml
src/: build_nace2025_sirene4.py  build_vector_db.py  encode_ambiguous.py  encode_ambiguous_cag.py  encode_ambiguous_rag.py  encode_unambiguous.py  evaluate_strategies.py  write_prompts.py
src/config/: __init__.py  langfuse.py  logging.py
src/constants/: data.py  llm.py  paths.py  prompting.py  vector_db.py
src/evaluation/: evaluation.py  evaluator.py
src/llm/: model.py  prompting.py  response.py
src/mappings/: mappings.py  models.py
src/strategies/: base.py  cag.py  rag.py
src/utils/: cache_models.py  data.py  strategies.py
src/vector_db/: loading.py  notices_nace.py  parsing.py
utils/: optimize_NAF2025_annotation.sh  partition_otm_nace.py  test.py  textual_similarity_clustering.py  textual_similarity_clustering_levenshtein copy.py  textual_similarity_clustering_levenshtein.py
