[project]
name = "codif-ape-nace-revision"
version = "0.1.0"
description = "This repository is dedicated to the revision of the Nomenclature statistique des Activités économiques dans la Communauté Européenne (NACE)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressed-tensors>=0.7.0",
    "ipywidgets>=8.1.0",
    "langchain-community>=0.3.1",
    "langchain-core>=0.3.7",
    "langchain-huggingface>=0.1.2",
    "langchain-qdrant>=0.2.0",
    "mlflow>=2.16.2",
    "openpyxl>=3.1.3",
    "optimum>=1.23.1",
    "pandas>=2.2.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.4",
    "transformers>=4.44.2",
    "vllm>=0.6.1",
    "xlrd>=2.0.1",
    "s3fs>=2025.3.0",
    "duckdb>=1.2.1",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
