[project]
name = "codif-ape-nace-revision"
version = "0.1.0"
description = "This repository is dedicated to the revision of the Nomenclature statistique des Activités économiques dans la Communauté Européenne (NACE)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.1",
    "langchain-openai>=0.3.19",
    "langchain-qdrant>=0.2.0",
    "mlflow>=2.16.2",
    "openpyxl>=3.1.3",
    "pandas>=2.2.2",
    "transformers>=4.53.0",
    "xlrd>=2.0.1",
    "s3fs>=2025.3.2",
    "duckdb>=1.2.1",
    "langchain-huggingface>=0.3.0",
    "langfuse>=3.0.8",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.uv]
default-groups = ["dev"]
